--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Movie Recommendations</title>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./CSS/main.css" />
 </head>
 
 <body>
@@ -46,8 +46,8 @@
 
 
 
-    <script src="./js/key.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./JS/key.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
